# RealTimeInsight

./: .gitignore  README.md  RealTimeInsight_Claude_Code_Master_Prompt.md  RealTimeInsight_Frontend_Component_State_Mock_Spec.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.omc/: prd-slice1.json  (+3 more)
project/crates/rti_core/: Cargo.toml  README.md
project/crates/rti_core/src/: lib.rs
project/crates/rti_core/src/assets/: mod.rs
project/crates/rti_core/src/bridge/: mod.rs
project/crates/rti_core/src/data_ref/: mod.rs
project/crates/rti_core/src/export/: mod.rs
project/crates/rti_core/src/graph/: mod.rs
project/crates/rti_core/src/ingest/: managed.rs  mod.rs  pipeline.rs  receiver.rs  udp.rs
project/crates/rti_core/src/jobs/: mod.rs
project/crates/rti_core/src/llm/: mod.rs
project/crates/rti_core/src/matlab/: mod.rs
project/crates/rti_core/tests/: bridge_contract.rs  data_ref_registry.rs  datagram_pipeline.rs  datagram_soak_smoke.rs  datagram_source.rs  datagram_throughput_smoke.rs  evidence_graph.rs  export_csv.rs  ingest_store.rs  job_queue.rs  llm_evidence.rs  managed_receiver_loop.rs  matlab_boundary.rs  mission_edge.rs  multi_rate_soak_smoke.rs  offline_assets.rs  pcm_decode.rs  pcm_generator.rs  pcm_performance.rs  pcm_sync_scan.rs  pcm_throughput_smoke.rs  receiver_diagnostics.rs  receiver_session.rs  receiver_tick.rs  replay_store.rs  runtime_command_policy.rs  simdis_bridge_profile.rs  simdis_dis.rs  simdis_security.rs  stream_runtime.rs  udp_receiver.rs  video_sync.rs
(+292 files in other folders)
