[package]
name = "rti_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "pcm_gen"
path = "src/bin/pcm_gen.rs"
